--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -63,8 +63,8 @@ tags:
 - week26 ✔️ Bible 1111010 Pray 111111？
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
 - week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
-- week29 《宗教情感》《圣洁》1111 Pray 1111
-- week30
+- week29 《宗教情感》《圣洁》1111111 Pray 1111111
+- week30 《圣洁》 10 Pray 11
 - week31
 - week32
 - week33
@@ -123,7 +123,7 @@ tags:
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
 - week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
 - week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
-- week29 跑步 0100
+- week29 跑步 0100010 沐沐跑步 2次，好棒！
 - week30 
 - week31 
 - week32 
@@ -171,8 +171,8 @@ tags:
 - week26 🔴 no progress
 - week27 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week29 周一学习科目三
-- week30 
+- week29 周一晚上/周日下午学习科目三
+- week30 周二下午练科目三
 - week31 
 - week32 
 - week33
@@ -202,7 +202,7 @@ tags:
 - week26 🔴 打不通
 - week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week29 
+- week29 🔴
 - week30 
 - week31 
 - week32 
@@ -243,7 +243,7 @@ tags:
 - week26 开始学洪恩识字 200-600 汉字包
 - week27 字越来越难，速度开始放慢了。
 - week28 洪恩识字持续学习中
-- week29 
+- week29 洪恩识字持续学习中
 - week30 
 - week31 
 - week32 
@@ -299,7 +299,7 @@ tags:
 - week26 🔴
 - week27 ✔️ team meeting / meeting with Janina
 - week28 🔴 team meeting
-- week29 team meeting
+- week29 🔴 team meeting
 - week30 
 - week31 
 - week32 
@@ -391,7 +391,7 @@ tags:
 - week26 🔴 no progress （全家出游)
 - week27 ✔️ CloudFront + S3
 - week28 🔴 no progress (花了很多时间在小组的事情上）
-- week29 
+- week29 ✔️ start SQS
 
 ### 3.打磨前端能力，达到初级前端程序员的水平。
 
@@ -419,7 +419,8 @@ tags:
 - week26 🔴 no progress
 - week27 🔴 no progress
 - week28 🔴 no progress
-- week29 
+- week29 🔴 no progress
+
 
 ### 4.提高自己远程办公的能力
 
@@ -465,7 +466,7 @@ Objective
 	- Apr. 🔴 no progress
 	- May. 2020-05-16《教小朋友识字》✔️
 	- June. 🔴 no progress
-	- July. 《教小朋友学习的一点心得》✔️
+	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
 	- Aug.
 	- Sept.
 	- Oct.
@@ -562,11 +563,15 @@ Objective
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的NIV版本，这样他们不会轻易扔掉。
 	- Python 大妈
+	- 荣安驾校的程教练 ?
 
 2. 如果朋友结婚，送他们《爱的五种语言》。
 	- Ben@workstream
+	- 陈哲和王黎 ?
+	- Sara 和子玉 ? 
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
+	- 送 Paul 和盈盈
 	- 韬哥（8月底）
 
 4. 其他
