--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -64,7 +64,7 @@ tags:
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
 - week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
 - week29 《宗教情感》《圣洁》1111111 Pray 1111111
-- week30 《圣洁》 10 Pray 11
+- week30 《圣洁》 1011101 Pray 1111001 这周五/周六考科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
 - week31
 - week32
 - week33
@@ -124,7 +124,7 @@ tags:
 - week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
 - week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
 - week29 跑步 0100010 沐沐跑步 2次，好棒！
-- week30 
+- week30 沐沐教我轮滑1次，与家人一起游泳1次。
 - week31 
 - week32 
 - week33 
@@ -165,21 +165,23 @@ tags:
 - week20 ✔️ 周六复习了所有学过的东西
 - week21 no progress
 - week22 ✔️ 约到了科一
-- week23 周三科一考试 \｜ 练了一次车
+- week23 周三科一考试 \| 练了一次车
 - week24 周五下午练车一次 5 hour
 - week25 周五模拟考，周六考试，科目二通过, yeah!
 - week26 🔴 no progress
 - week27 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week29 周一晚上/周日下午学习科目三
-- week30 周二下午练科目三
+- week30 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
 - week31 
 - week32 
 - week33
 
 ### 2.保持财务健康
 
-- 今年经济不好，尽快把债务还清：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
+- 今年经济不好，尽快把债务还清
+	- 欠哥哥5万
+	- 欠妹妹7万
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
 > 交易原则  
@@ -203,7 +205,7 @@ tags:
 - week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week29 🔴
-- week30 
+- week30 ✔️ 和爸妈闲聊了一会。
 - week31 
 - week32 
 - week33
@@ -223,46 +225,67 @@ tags:
 - 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
   - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️ 
 
-### 4.探索: 教沐沐打字
 
-### 5.探索: 教沐沐编程
+### 4.探索: 教沐沐编程
 
 （或许可以先从逻辑开始）
 
-### 6.探索: 邀请沐沐的好朋友来家里做客
+### 5.探索: 邀请沐沐的好朋友来家里做客
 
-### 7.探索：教沐沐识字
+### 6.探索：教沐沐识字
 
-- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
-- week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
-- week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
-- week19 通过洪恩识字，沐沐已经认识几十个字了。
-- week23 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
-- week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
-- week25 突破 200 个汉字了，yeah!
-- week26 开始学洪恩识字 200-600 汉字包
-- week27 字越来越难，速度开始放慢了。
-- week28 洪恩识字持续学习中
-- week29 洪恩识字持续学习中
-- week30 
+- week5 ✔️ 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
+- week10 ✔️ 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
+- week16 ✔️ 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
+- week19 ✔️ 通过洪恩识字，沐沐已经认识几十个字了。
+- week23 ✔️ 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
+- week24 ✔️ 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
+- week25 ✔️ 突破 200 个汉字了，yeah!
+- week26 ✔️ 开始学洪恩识字 200-600 汉字包
+- week27 ✔️ 字越来越难，速度开始放慢了。
+- week28 ✔️ 洪恩识字持续学习中
+- week29 ✔️ 洪恩识字持续学习中
+- week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week31 
 - week32 
 - week33 
 
-### 8. [增补] 教沐沐数学
+### 7. [增补] 教沐沐数学
 
-- week27 开始学习洪恩数学中的 1-5，大小，高矮
-- week28 开始学习洪恩数学几何图形
-- week29
-- week30 
+- week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
+- week28 ✔️ 开始学习洪恩数学几何图形
+- week29 ✔️ 洪恩数学学习中，但是我不知道进度。
+- week30 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week31 
 - week32 
 - week33 
+
+### 8. [增补] 教沐沐服务别人
+
+通过服务别人，帮助他认识到别人对他的付出并不是理所当然的，要以感恩的心对待。落实到每天的日常：
+
+- 全家人用餐结束后，沐沐负责收拾碗筷到洗碗机；
+- 每周六与周日的早晨，沐沐负责准备；
+- 沐沐周日买西瓜到教会。
+- 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
+
+每周复盘
+
+- week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+
 
 
 ### 9. [增补？] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
+
+### 10. ~~探索: 教沐沐打字 (他不感兴趣)~~
 
 
 ---
@@ -300,7 +323,7 @@ tags:
 - week27 ✔️ team meeting / meeting with Janina
 - week28 🔴 team meeting
 - week29 🔴 team meeting
-- week30 
+- week30 🔴 team meeting 英语口语衰退的越来越厉害。
 - week31 
 - week32 
 - week33 
@@ -362,6 +385,29 @@ tags:
 - week27 ✔️ 重构 onboarding modules
 - week28 ✔️ module communication. (WIP)
 - week29 module communication.
+- week30 process duplicate (WIP)
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ### 2.考个 AWS Certified Solutions Architect 证书。
 
@@ -392,6 +438,29 @@ tags:
 - week27 ✔️ CloudFront + S3
 - week28 🔴 no progress (花了很多时间在小组的事情上）
 - week29 ✔️ start SQS
+- week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ### 3.打磨前端能力，达到初级前端程序员的水平。
 
@@ -420,6 +489,29 @@ tags:
 - week27 🔴 no progress
 - week28 🔴 no progress
 - week29 🔴 no progress
+- week30 🔴 no progress
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 
 ### 4.提高自己远程办公的能力
@@ -487,7 +579,7 @@ Objective
 
 - ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
 
-- 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
+- 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
 
 - 学术造假数据库，给少灵用用看。
 
@@ -496,12 +588,11 @@ Objective
 
 ---
 
-## 祝福到别人
+## 教会服侍
 
-不要忙于做事情，让身心俱疲；也不要流于形式，忘记了关心别人的初心。
+不要忙于做事情，让身心俱疲；也不要流于形式，忘记了关心别人的初心。目地很重要，也记得欣赏沿途的美景。
 
-目地很重要，也记得欣赏沿途的美景。
-
+不要因为有些人哭的最响，就急忙去喂他们。人都是喂不饱的，唯有神可以喂饱。此外要帮助他们校正预期。
 
 ### 1.开放家庭
 
@@ -529,10 +620,10 @@ Objective
 - Jan. 🔴 failed due to COVID-19
 - Feb. 🔴 failed due to COVID-19
 - Mar. 🔴 failed due to COVID-19
-- Apr. 🔴 failed
-- May. 🔴 failed
-- June. 
-- July.
+- Apr. 🔴 failed due to laziness
+- May. 🔴 failed due to laziness
+- June. 🔴 failed due to laziness
+- July. ✔️ 2020-07-20 / 2020-07-22 去施浩的办公室蹭了两天，好吃好喝，猪大肠套餐真好吃。yeah! 迈出了本年度的第一步。
 - Aug.
 - Sept.
 - Oct.
@@ -567,8 +658,7 @@ Objective
 
 2. 如果朋友结婚，送他们《爱的五种语言》。
 	- Ben@workstream
-	- 陈哲和王黎 ?
-	- Sara 和子玉 ? 
+	- 陈哲和王黎
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
@@ -605,11 +695,12 @@ Objective
 
 ### 9. 自己做不了的事情，不要碰，找其他人互补。
 
-- 关心陌生人。个性内向，非常不喜欢和陌生人打交道。
+- 关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不占用，心里就可以接受。）
 - 陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
 - 组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
 - 参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
 - 微信/Signal 中大量的沟通，让我的时间碎片化，无法深入思考，我很不喜欢。
+
 
 <!---### 5.和教会的 Vincent 聊聊天
 
@@ -617,7 +708,7 @@ Objective
 
 - 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 - 2020-05-03 ✔️ 在滨江大道散步
-- 2020-07-07 关系没有办法继续下去了。
+- 2020-07-07 没有办法继续下去了。
 -->
 
 2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
