--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -64,8 +64,8 @@ tags:
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
 - week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
 - week29 《宗教情感》《圣洁》1111111 Pray 1111111
-- week30 《圣洁》 1011101 Pray 1111001 这周五/周六考科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
-- week31
+- week30 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
+- week31 《宗教情感》11110 Pray 11111 
 - week32
 - week33
 - week34
@@ -123,9 +123,9 @@ tags:
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
 - week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
 - week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
-- week29 跑步 0100010 沐沐跑步 2次，好棒！
-- week30 沐沐教我轮滑1次，与家人一起游泳1次。
-- week31 
+- week29 ✔️ 跑步 0100010 沐沐跑步 2次，好棒！
+- week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
+- week31 跑步 11010  这周全家人一起跑步
 - week32 
 - week33 
 - week34 
@@ -173,15 +173,15 @@ tags:
 - week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week29 周一晚上/周日下午学习科目三
 - week30 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
-- week31 
-- week32 
+- week31 no progress
+- week32 科目四
 - week33
 
 ### 2.保持财务健康
 
 - 今年经济不好，尽快把债务还清
 	- 欠哥哥5万
-	- 欠妹妹7万
+	- ✔️ 还清妹妹7万
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
 > 交易原则  
