--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -65,8 +65,8 @@ tags:
 - week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
 - week29 《宗教情感》《圣洁》1111111 Pray 1111111
 - week30 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
-- week31 《宗教情感》11110 Pray 11111 
-- week32
+- week31 《宗教情感》1111011 Pray 1111101 
+- week32 《宗教情感》10 Pray 10
 - week33
 - week34
 - week35
@@ -125,8 +125,8 @@ tags:
 - week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
 - week29 ✔️ 跑步 0100010 沐沐跑步 2次，好棒！
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
-- week31 跑步 11010  这周全家人一起跑步
-- week32 
+- week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
+- week32  全家人跑步 1  自己跑步
 - week33 
 - week34 
 - week35 
@@ -174,7 +174,7 @@ tags:
 - week29 周一晚上/周日下午学习科目三
 - week30 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
 - week31 no progress
-- week32 科目四
+- week32 周六科目四考试
 - week33
 
 ### 2.保持财务健康
@@ -206,14 +206,14 @@ tags:
 - week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week29 🔴
 - week30 ✔️ 和爸妈闲聊了一会。
-- week31 
+- week31 ✔️ 和爸妈闲聊 | 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
 - week32 
 - week33
 
 ### [增补] 每个月给爷爷奶奶寄送 5 张照片
 
 - June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
-- July.
+- July. 🔴
 - Aug.
 - Sept.
 - Oct.
@@ -246,7 +246,7 @@ tags:
 - week28 ✔️ 洪恩识字持续学习中
 - week29 ✔️ 洪恩识字持续学习中
 - week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
-- week31 
+- week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week32 
 - week33 
 
@@ -256,7 +256,7 @@ tags:
 - week28 ✔️ 开始学习洪恩数学几何图形
 - week29 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week30 ✔️ 洪恩数学学习中，但是我不知道进度。
-- week31 
+- week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
 - week32 
 - week33 
 
@@ -272,7 +272,7 @@ tags:
 每周复盘
 
 - week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
-- week31 
+- week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
 - week32 
 - week33 
 - week34 
@@ -324,7 +324,7 @@ tags:
 - week28 🔴 team meeting
 - week29 🔴 team meeting
 - week30 🔴 team meeting 英语口语衰退的越来越厉害。
-- week31 
+- week31 🔴 team meeting 上有一次发言，介绍每天的日程安排，感觉还不错。
 - week32 
 - week33 
 - week34 
@@ -386,7 +386,7 @@ tags:
 - week28 ✔️ module communication. (WIP)
 - week29 module communication.
 - week30 process duplicate (WIP)
-- week31 
+- week31 process duplicate / Rails generator
 - week32 
 - week33 
 - week34 
@@ -439,7 +439,7 @@ tags:
 - week28 🔴 no progress (花了很多时间在小组的事情上）
 - week29 ✔️ start SQS
 - week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
-- week31 
+- week31 🔴 no progress
 - week32 
 - week33 
 - week34 
@@ -490,7 +490,7 @@ tags:
 - week28 🔴 no progress
 - week29 🔴 no progress
 - week30 🔴 no progress
-- week31 
+- week31 🔴 no progress
 - week32 
 - week33 
 - week34 
@@ -559,7 +559,7 @@ Objective
 	- May. 2020-05-16《教小朋友识字》✔️
 	- June. 🔴 no progress
 	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
-	- Aug.
+	- Aug. 《沐沐的2020成长日记》写完，但是没发 ✔️
 	- Sept.
 	- Oct.
 	- Nov.
@@ -606,6 +606,7 @@ Objective
 - 2020-06-13 ✔️ 请坤叔，葡萄，小崔，果果来家里，给妈妈们放半天假。
 - 2020-06-18 ✔️ 钱岩姐妹来我家吃晚饭，让我帮忙升级电脑，装软件，磁盘扩容。
 - 2020-07-08 ✔️ Jean 来我家探访。第一次深入聊天，居然有聊不完的话题。原来我想走的路，她都走过了。真希望能再聊一次。
+- 2020-07-31 ✔️ 周五小组查经在我家，招待小蓝/晓晓/向文/黄田一起吃晚饭。
 - Aug.
 - Sept.
 - Oct.
@@ -623,7 +624,7 @@ Objective
 - Apr. 🔴 failed due to laziness
 - May. 🔴 failed due to laziness
 - June. 🔴 failed due to laziness
-- July. ✔️ 2020-07-20 / 2020-07-22 去施浩的办公室蹭了两天，好吃好喝，猪大肠套餐真好吃。yeah! 迈出了本年度的第一步。
+- July. ✔️ 2020-07-20 / 2020-07-22 去施浩的办公室蹭了两天网，好吃好喝，猪大肠套餐真好吃。yeah! 迈出了本年度的第一步。
 - Aug.
 - Sept.
 - Oct.
@@ -653,20 +654,23 @@ Objective
 ### 4. 送别人有帮助的书籍
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的NIV版本，这样他们不会轻易扔掉。
-	- Python 大妈
-	- 荣安驾校的程教练 ?
+	- Python 大妈 ✔️
+	- 荣安驾校的程教练 ✔️
 
 2. 如果朋友结婚，送他们《爱的五种语言》。
-	- Ben@workstream
-	- 陈哲和王黎
+	- Ben@workstream ✔️
+	- 陈哲和王黎 ✔️
+	- Sara和子玉 ✔️
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
 	- 韬哥（8月底）
+	- 送姐姐和姐夫 《子女心，父母情》(WIP)
 
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》
 	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。
+	- 送姑姑圣经和《》 (WIP)
 
 
 ### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -679,6 +683,8 @@ Objective
 
 
 ### 6. 带领3次小组读经，3次小组祷告会。
+
+- 2020-08-02 小组祷告会
 
 ### 7. 长期和一个年轻人（向文）保持连接。
 
@@ -695,7 +701,7 @@ Objective
 
 ### 9. 自己做不了的事情，不要碰，找其他人互补。
 
-- 关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不占用，心里就可以接受。）
+- 关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
 - 陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
 - 组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
 - 参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
