--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -21,7 +21,9 @@ tags:
 - 戴德生《人往哪里去》
 - 斯托得《无与伦比的基督》✔️
 - 《软弱之道》✔️
-- 《英国复兴领袖传》
+- 《英国复兴领袖传》✔️
+- 《宗教情感》第一遍 ✔️
+- 《宗教情感》第二遍 (WIP)
 
 听不同讲道人的讲道
 
@@ -57,16 +59,16 @@ tags:
 - week20 ? 太忙了，没空反思我干了啥
 - week21 ? 太忙了，没空反思我干了啥
 - week22 ?  太忙了，没空反思我干了啥
-- week23 🔴 Bible 10 Pray 0
-- week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
+- week23 🔴 Bible 10????? Pray 0??????
+- week24 🔴 Bible 11????? Pray 11????? 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
 - week25 ✔️ Bible 1111100 Pray 1111100 花了很多时间修补关系。被李燕，小蓝，李帅鼓励。但更多的是无力感，受挫，糟糕情绪的反复。
 - week26 ✔️ Bible 1111010 Pray 111111？
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
-- week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
-- week29 《宗教情感》《圣洁》1111111 Pray 1111111
-- week30 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
-- week31 《宗教情感》1111011 Pray 1111101 
-- week32 《宗教情感》10 Pray 10
+- week28 ✔️《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
+- week29 ✔️ 《宗教情感》《圣洁》1111111 Pray 1111111
+- week30 ✔️ 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
+- week31 ✔️ 《宗教情感》1111011 Pray 1111101 
+- week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33
 - week34
 - week35
@@ -121,12 +123,12 @@ tags:
 - week24 ✔️ 跑步 0101
 - week25 ✔️ 跑步 11 游泳 001
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
-- week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
+- week27 ✔️ 跑步 0100010  周三和沐沐第一次一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
 - week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
 - week29 ✔️ 跑步 0100010 沐沐跑步 2次，好棒！
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
-- week32  全家人跑步 1  自己跑步
+- week32  跑步 1
 - week33 
 - week34 
 - week35 
@@ -153,7 +155,7 @@ tags:
 
 ## Family
 
-### 1.拿到驾照
+### 1.拿到驾照 ✔️
 
 学开车，这条是2019年的遗愿。
 
@@ -163,19 +165,21 @@ tags:
 - week18 🔴 no progress
 - week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头 \| 体检
 - week20 ✔️ 周六复习了所有学过的东西
-- week21 no progress
+- week21 🔴 no progress
 - week22 ✔️ 约到了科一
 - week23 周三科一考试 \| 练了一次车
 - week24 周五下午练车一次 5 hour
 - week25 周五模拟考，周六考试，科目二通过, yeah!
 - week26 🔴 no progress
-- week27 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week29 周一晚上/周日下午学习科目三
-- week30 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
-- week31 no progress
-- week32 周六科目四考试
-- week33
+- week27 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
+- week28 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
+- week29 ✔️ 周一晚上/周日下午学习科目三
+- week30 ✔️ 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
+- week31 🔴 no progress
+- week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
+
+![](/media/files/2020/2020-08-08_15-15-02.jpg)
+
 
 ### 2.保持财务健康
 
@@ -188,7 +192,8 @@ tags:
 > 
 > Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
 > 
-> Rule2: 以后不再向别人推荐 ETF 和股票，涨涨跌跌，勾人心魂，太害人了。
+> Rule2: 不主动向朋友推荐 ETF 和股票。  
+> 
 > 若违背以上原则，刘小坤重重的用管教杖责打二次。
 
 ### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
@@ -198,7 +203,7 @@ tags:
 - Quarter 3
 - Quarter 4
 
-### [增补] 每周给爷爷奶奶打个电话
+### [增补] 每周给爸妈&爷爷奶奶打个电话
 
 - week25 ✔️
 - week26 🔴 打不通
@@ -206,8 +211,8 @@ tags:
 - week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week29 🔴
 - week30 ✔️ 和爸妈闲聊了一会。
-- week31 ✔️ 和爸妈闲聊 | 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
-- week32 
+- week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
+- week32 ✔️ 和爸妈闲聊
 - week33
 
 ### [增补] 每个月给爷爷奶奶寄送 5 张照片
@@ -223,7 +228,8 @@ tags:
 ### 3.教沐沐英文
 
 - 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
-  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️ 
+  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️
+  - 7月份去 Jill 的暑期夏令营 ✔️
 
 
 ### 4.探索: 教沐沐编程
@@ -247,7 +253,7 @@ tags:
 - week29 ✔️ 洪恩识字持续学习中
 - week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
-- week32 
+- week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
 - week33 
 
 ### 7. [增补] 教沐沐数学
@@ -257,7 +263,7 @@ tags:
 - week29 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week30 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
-- week32 
+- week32 ✔️ 沐沐自己在学，我不知道进度
 - week33 
 
 ### 8. [增补] 教沐沐服务别人
@@ -324,7 +330,7 @@ tags:
 - week28 🔴 team meeting
 - week29 🔴 team meeting
 - week30 🔴 team meeting 英语口语衰退的越来越厉害。
-- week31 🔴 team meeting 上有一次发言，介绍每天的日程安排，感觉还不错。
+- week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
 - week32 
 - week33 
 - week34 
@@ -439,8 +445,8 @@ tags:
 - week28 🔴 no progress (花了很多时间在小组的事情上）
 - week29 ✔️ start SQS
 - week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
-- week31 🔴 no progress
-- week32 
+- week31 🔴 no progress (业余时间放在了《宗教情感》上）
+- week32 🔴 no progress (业余时间放在了驾照科目三的考试上）
 - week33 
 - week34 
 - week35 
@@ -491,7 +497,7 @@ tags:
 - week29 🔴 no progress
 - week30 🔴 no progress
 - week31 🔴 no progress
-- week32 
+- week32 🔴 no progress
 - week33 
 - week34 
 - week35 
@@ -559,7 +565,7 @@ Objective
 	- May. 2020-05-16《教小朋友识字》✔️
 	- June. 🔴 no progress
 	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
-	- Aug. 《沐沐的2020成长日记》写完，但是没发 ✔️
+	- Aug. 《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 ✔️
 	- Sept.
 	- Oct.
 	- Nov.
@@ -607,6 +613,7 @@ Objective
 - 2020-06-18 ✔️ 钱岩姐妹来我家吃晚饭，让我帮忙升级电脑，装软件，磁盘扩容。
 - 2020-07-08 ✔️ Jean 来我家探访。第一次深入聊天，居然有聊不完的话题。原来我想走的路，她都走过了。真希望能再聊一次。
 - 2020-07-31 ✔️ 周五小组查经在我家，招待小蓝/晓晓/向文/黄田一起吃晚饭。
+- 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田一起吃晚饭。他们觉得阿姨的准备的晚饭非常好吃。
 - Aug.
 - Sept.
 - Oct.
@@ -670,7 +677,7 @@ Objective
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》
 	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。
-	- 送姑姑圣经和《》 (WIP)
+	- 送琳琳姑姑圣经
 
 
 ### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -701,10 +708,10 @@ Objective
 
 ### 9. 自己做不了的事情，不要碰，找其他人互补。
 
-- 关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
-- 陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
-- 组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
-- 参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
+- 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
+- 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
+- 我不喜欢组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
+- 我不喜欢参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
 - 微信/Signal 中大量的沟通，让我的时间碎片化，无法深入思考，我很不喜欢。
 
 
