--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -167,9 +167,9 @@ tags:
 - week20 ✔️ 周六复习了所有学过的东西
 - week21 🔴 no progress
 - week22 ✔️ 约到了科一
-- week23 周三科一考试 \| 练了一次车
-- week24 周五下午练车一次 5 hour
-- week25 周五模拟考，周六考试，科目二通过, yeah!
+- week23 ✔️ 周三科一考试 \| 练了一次车
+- week24 ✔️ 周五下午练车一次 5 hour
+- week25 ✔️ 周五模拟考，周六考试，科目二通过, yeah!
 - week26 🔴 no progress
 - week27 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week28 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
