--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -331,7 +331,7 @@ tags:
 - week29 🔴 team meeting
 - week30 🔴 team meeting 英语口语衰退的越来越厉害。
 - week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
-- week32 
+- week32 🔴 team meeting
 - week33 
 - week34 
 - week35 
