--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -69,7 +69,7 @@ tags:
 - week30 ✔️ 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
-- week33
+- week33 Bible 1 周一诗篇 Pray 1 （这周看到圣经就特别烦，不想读经祷告）
 - week34
 - week35
 - week36
@@ -128,7 +128,7 @@ tags:
 - week29 ✔️ 跑步 0100010 沐沐跑步 2次，好棒！
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
-- week32  跑步 1
+- week32 ✔️ 跑步 1000011 
 - week33 
 - week34 
 - week35 
@@ -279,7 +279,7 @@ tags:
 
 - week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
 - week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
-- week32 
+- week32 no progress
 - week33 
 - week34 
 - week35 
@@ -393,7 +393,7 @@ tags:
 - week29 module communication.
 - week30 process duplicate (WIP)
 - week31 process duplicate / Rails generator
-- week32 
+- week32 Employee initial value
 - week33 
 - week34 
 - week35 
@@ -446,7 +446,7 @@ tags:
 - week29 ✔️ start SQS
 - week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
 - week31 🔴 no progress (业余时间放在了《宗教情感》上）
-- week32 🔴 no progress (业余时间放在了驾照科目三的考试上）
+- week32 ✔️ Udemy Section 17: Databases in AWS
 - week33 
 - week34 
 - week35 
@@ -672,7 +672,7 @@ Objective
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
 	- 韬哥（8月底）
-	- 送姐姐和姐夫 《子女心，父母情》(WIP)
+	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
 
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》
