--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -69,7 +69,7 @@ tags:
 - week30 ✔️ 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
-- week33 Bible 1 周一诗篇 Pray 1 （这周看到圣经就特别烦，不想读经祷告）
+- week33 Bible 1110 PS|PS|RA|| Pray 1 （这周看到圣经就特别烦，不想读经祷告）
 - week34
 - week35
 - week36
@@ -129,7 +129,7 @@ tags:
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
 - week32 ✔️ 跑步 1000011 
-- week33 
+- week33 跑步 1000 这周每次都是全家人一起跑步
 - week34 
 - week35 
 - week36 
@@ -254,7 +254,7 @@ tags:
 - week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
-- week33 
+- week33 字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
 
 ### 7. [增补] 教沐沐数学
 
@@ -447,7 +447,7 @@ tags:
 - week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
 - week31 🔴 no progress (业余时间放在了《宗教情感》上）
 - week32 ✔️ Udemy Section 17: Databases in AWS
-- week33 
+- week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
 - week34 
 - week35 
 - week36 
