--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -69,8 +69,8 @@ tags:
 - week30 ✔️ 《圣洁》 1011101 Pray 1111001 周五/周六考驾照科目三，早晨5点就起床赶到沈杜公路，没时间祷告。
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
-- week33 Bible 1110 PS|PS|RA|| Pray 1 （这周看到圣经就特别烦，不想读经祷告）
-- week34
+- week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
+- week34 读经 0 Pray 0
 - week35
 - week36
 - week37
@@ -129,7 +129,7 @@ tags:
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
 - week32 ✔️ 跑步 1000011 
-- week33 跑步 1000 这周每次都是全家人一起跑步
+- week33 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
 - week34 
 - week35 
 - week36 
@@ -209,11 +209,14 @@ tags:
 - week26 🔴 打不通
 - week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week29 🔴
+- week29 🔴 忘记了
 - week30 ✔️ 和爸妈闲聊了一会。
 - week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
 - week32 ✔️ 和爸妈闲聊
-- week33
+- week33 🔴 忘记了
+- week34 
+- week35 
+- week36 
 
 ### [增补] 每个月给爷爷奶奶寄送 5 张照片
 
@@ -254,7 +257,7 @@ tags:
 - week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
-- week33 字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
+- week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
 
 ### 7. [增补] 教沐沐数学
 
@@ -263,8 +266,8 @@ tags:
 - week29 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week30 ✔️ 洪恩数学学习中，但是我不知道进度。
 - week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
-- week32 ✔️ 沐沐自己在学，我不知道进度
-- week33 
+- week32 ✔️ 沐沐自己在学，我不知道进度。
+- week33 ✔️ 沐沐自己在学，我不知道进度
 
 ### 8. [增补] 教沐沐服务别人
 
@@ -280,7 +283,7 @@ tags:
 - week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
 - week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
 - week32 no progress
-- week33 
+- week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
 - week34 
 - week35 
 - week36 
@@ -332,7 +335,7 @@ tags:
 - week30 🔴 team meeting 英语口语衰退的越来越厉害。
 - week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
 - week32 🔴 team meeting
-- week33 
+- week33 🔴 一点进度都没有
 - week34 
 - week35 
 - week36 
@@ -394,7 +397,7 @@ tags:
 - week30 process duplicate (WIP)
 - week31 process duplicate / Rails generator
 - week32 Employee initial value
-- week33 
+- week33 deprecate form in employee information
 - week34 
 - week35 
 - week36 
@@ -498,7 +501,7 @@ tags:
 - week30 🔴 no progress
 - week31 🔴 no progress
 - week32 🔴 no progress
-- week33 
+- week33 🔴 no progress
 - week34 
 - week35 
 - week36 
@@ -598,7 +601,7 @@ Objective
 
 不要忙于做事情，让身心俱疲；也不要流于形式，忘记了关心别人的初心。目地很重要，也记得欣赏沿途的美景。
 
-不要因为有些人哭的最响，就急忙去喂他们。人都是喂不饱的，唯有神可以喂饱。此外要帮助他们校正预期。
+不要因为有些人哭的最响，就急忙去喂他们。人都是喂不饱的，唯有神可以喂饱。此外要帮助他们校正预期。（2020-08-17 update 再次印证，不要因为哭的最响的人的需要，而忽略整体的牧养缺口）
 
 ### 1.开放家庭
 
@@ -614,6 +617,7 @@ Objective
 - 2020-07-08 ✔️ Jean 来我家探访。第一次深入聊天，居然有聊不完的话题。原来我想走的路，她都走过了。真希望能再聊一次。
 - 2020-07-31 ✔️ 周五小组查经在我家，招待小蓝/晓晓/向文/黄田一起吃晚饭。
 - 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田一起吃晚饭。他们觉得阿姨的准备的晚饭非常好吃。
+- 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎
 - Aug.
 - Sept.
 - Oct.
@@ -660,7 +664,7 @@ Objective
 
 ### 4. 送别人有帮助的书籍
 
-1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的NIV版本，这样他们不会轻易扔掉。
+1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 	- Python 大妈 ✔️
 	- 荣安驾校的程教练 ✔️
 
@@ -692,6 +696,8 @@ Objective
 ### 6. 带领3次小组读经，3次小组祷告会。
 
 - 2020-08-02 小组祷告会
+- 2020-08-09 小组祷告会
+- 2020-08-16 小组祷告会
 
 ### 7. 长期和一个年轻人（向文）保持连接。
 
@@ -705,6 +711,7 @@ Objective
 - week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
+- 鼓励坤叔把读经打卡活动扩展到整个教会层面。
 
 ### 9. 自己做不了的事情，不要碰，找其他人互补。
 
