--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -70,7 +70,7 @@ tags:
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
-- week34 读经 0 Pray 0
+- week34 《宗教情感》 0111 Pray 0001
 - week35
 - week36
 - week37
@@ -129,8 +129,8 @@ tags:
 - week30 ✔️ 沐沐教我轮滑1次，全家人一起游泳1次。
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
 - week32 ✔️ 跑步 1000011 
-- week33 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
-- week34 
+- week33 ✔️ 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
+- week34 跑步 000 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。
 - week35 
 - week36 
 - week37
@@ -258,7 +258,10 @@ tags:
 - week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
 - week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
-
+- week34 
+- week35 
+- week36 
+- 
 ### 7. [增补] 教沐沐数学
 
 - week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
@@ -268,6 +271,10 @@ tags:
 - week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
 - week32 ✔️ 沐沐自己在学，我不知道进度。
 - week33 ✔️ 沐沐自己在学，我不知道进度
+- week34 
+- week35 
+- week36 
+
 
 ### 8. [增补] 教沐沐服务别人
 
@@ -336,7 +343,7 @@ tags:
 - week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
 - week32 🔴 team meeting
 - week33 🔴 一点进度都没有
-- week34 
+- week34 Talk with Ben / 
 - week35 
 - week36 
 - week37
@@ -451,7 +458,7 @@ tags:
 - week31 🔴 no progress (业余时间放在了《宗教情感》上）
 - week32 ✔️ Udemy Section 17: Databases in AWS
 - week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
-- week34 
+- week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store
 - week35 
 - week36 
 - week37
