--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -70,7 +70,7 @@ tags:
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
-- week34 《宗教情感》 0111 Pray 0001
+- week34 《宗教情感》 0111211 Pray 0001111
 - week35
 - week36
 - week37
@@ -130,7 +130,7 @@ tags:
 - week31 ✔️ 跑步 1101000  这周每次都是全家人一起跑步
 - week32 ✔️ 跑步 1000011 
 - week33 ✔️ 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
-- week34 跑步 000 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。
+- week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
 - week35 
 - week36 
 - week37
@@ -214,7 +214,7 @@ tags:
 - week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
 - week32 ✔️ 和爸妈闲聊
 - week33 🔴 忘记了
-- week34 
+- week34 ✔️
 - week35 
 - week36 
 
@@ -230,10 +230,12 @@ tags:
 
 ### 3.教沐沐英文
 
-- 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
-  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️
-  - 7月份去 Jill 的暑期夏令营 ✔️
+有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）  
+一， 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min   
+二， 英语的暑期夏令营  
 
+- week29-31 7月份参加 Jill 的暑期夏令营 ✔️
+- week34 学习叽里呱啦, youtube kids ✔️
 
 ### 4.探索: 教沐沐编程
 
@@ -258,7 +260,7 @@ tags:
 - week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
 - week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
-- week34 
+- week34 ✔️ 继续巩固复习错字和难字
 - week35 
 - week36 
 - 
@@ -271,7 +273,7 @@ tags:
 - week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
 - week32 ✔️ 沐沐自己在学，我不知道进度。
 - week33 ✔️ 沐沐自己在学，我不知道进度
-- week34 
+- week34 ✔️ 沐沐自己在学，我不知道进度
 - week35 
 - week36 
 
@@ -291,7 +293,7 @@ tags:
 - week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
 - week32 no progress
 - week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
-- week34 
+- week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
 - week35 
 - week36 
 
@@ -343,7 +345,7 @@ tags:
 - week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
 - week32 🔴 team meeting
 - week33 🔴 一点进度都没有
-- week34 Talk with Ben / 
+- week34 ✔️ Talk with Ben
 - week35 
 - week36 
 - week37
@@ -405,7 +407,7 @@ tags:
 - week31 process duplicate / Rails generator
 - week32 Employee initial value
 - week33 deprecate form in employee information
-- week34 
+- week34 deprecate form in employee information
 - week35 
 - week36 
 - week37
@@ -458,7 +460,7 @@ tags:
 - week31 🔴 no progress (业余时间放在了《宗教情感》上）
 - week32 ✔️ Udemy Section 17: Databases in AWS
 - week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
-- week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store
+- week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
 - week35 
 - week36 
 - week37
@@ -509,7 +511,7 @@ tags:
 - week31 🔴 no progress
 - week32 🔴 no progress
 - week33 🔴 no progress
-- week34 
+- week34 🔴 no progress
 - week35 
 - week36 
 - week37
@@ -575,7 +577,7 @@ Objective
 	- May. 2020-05-16《教小朋友识字》✔️
 	- June. 🔴 no progress
 	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
-	- Aug. 《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 ✔️
+	- Aug. 《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》✔️
 	- Sept.
 	- Oct.
 	- Nov.
@@ -625,6 +627,7 @@ Objective
 - 2020-07-31 ✔️ 周五小组查经在我家，招待小蓝/晓晓/向文/黄田一起吃晚饭。
 - 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田一起吃晚饭。他们觉得阿姨的准备的晚饭非常好吃。
 - 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎
+- 2020-08-29 小梅/坤叔/吕小荣一起带娃：葡萄，核桃，板栗，沐沐，Daniel
 - Aug.
 - Sept.
 - Oct.
@@ -662,7 +665,7 @@ Objective
 	- 2020-06-05 Allen Long 请教我远程办公事情
 	- 2020-06-06 和杨阳随便聊天
 	- 2020-06-1? 和少灵闲聊学术不端的问题
-- July.
+- July. 🔴 failed
 - Aug.
 - Sept.
 - Oct.
@@ -702,9 +705,9 @@ Objective
 
 ### 6. 带领3次小组读经，3次小组祷告会。
 
-- 2020-08-02 小组祷告会
-- 2020-08-09 小组祷告会
-- 2020-08-16 小组祷告会
+- ✔️ 2020-08-02 小组祷告会
+- ✔️ 2020-08-09 小组祷告会
+- ✔️ 2020-08-16 小组祷告会
 
 ### 7. 长期和一个年轻人（向文）保持连接。
 
@@ -720,7 +723,7 @@ Objective
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
 - 鼓励坤叔把读经打卡活动扩展到整个教会层面。
 
-### 9. 自己做不了的事情，不要碰，找其他人互补。
+### 9. 自己不擅长的事情，找其他人互补。
 
 - 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
@@ -752,13 +755,13 @@ Objective
 
 **感概**
 
-毕业工作八年了，有六年都做了年度计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点都是巧合。
+毕业工作八年了，有六年都做了年度计划。即使按照计划推进，但依然无法掌控人生的轨迹。重大人生转折，都是巧合。
 
-一是，学识少时，眼界也比较低，急功近利，随大流。等到自己稍微懂一点，就会发现当初寻求的东西都不值一提。
+一是，年轻时没有智慧，容易被虚空的事情吸引。急功近利，随大流，忽视家庭，忽视健康。等到自己稍微懂成熟一点，就会发现当初设定的目标都是虚空。
 
-二是，我是渺小的，哪扇门开启，哪扇门关闭，并不是我决定的，往往环境和境遇决定的。
+二是，人真的太渺小了，哪扇门开启，哪扇门关闭，往往大环境决定的。
 
-有谁能看得到明天呢？
+我们的生命不过是湖面上云雾，太阳一晒，就消散了。有谁能看得到明天呢？
 
 1. [My new year's resolutions for 2019](/plan-for-2019.html)
 2. [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
