--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -71,7 +71,7 @@ tags:
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
 - week34 《宗教情感》 0111211 Pray 0001111
-- week35
+- week35 《宗教情感》1111 Pray 1111
 - week36
 - week37
 - week38
@@ -131,7 +131,7 @@ tags:
 - week32 ✔️ 跑步 1000011 
 - week33 ✔️ 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
 - week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
-- week35 
+- week35 🔴 0000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
 - week36 
 - week37
 - week38
@@ -215,8 +215,24 @@ tags:
 - week32 ✔️ 和爸妈闲聊
 - week33 🔴 忘记了
 - week34 ✔️
-- week35 
+- week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
 - week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ### [增补] 每个月给爷爷奶奶寄送 5 张照片
 
@@ -236,12 +252,32 @@ tags:
 
 - week29-31 7月份参加 Jill 的暑期夏令营 ✔️
 - week34 学习叽里呱啦, youtube kids ✔️
+- week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ### 4.探索: 教沐沐编程
 
 （或许可以先从逻辑开始）
 
 ### 5.探索: 邀请沐沐的好朋友来家里做客
+
+- week35 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
 
 ### 6.探索：教沐沐识字
 
@@ -261,9 +297,26 @@ tags:
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
 - week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
 - week34 ✔️ 继续巩固复习错字和难字
-- week35 
+- week35  继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
 - week36 
-- 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+
 ### 7. [增补] 教沐沐数学
 
 - week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
@@ -274,16 +327,31 @@ tags:
 - week32 ✔️ 沐沐自己在学，我不知道进度。
 - week33 ✔️ 沐沐自己在学，我不知道进度
 - week34 ✔️ 沐沐自己在学，我不知道进度
-- week35 
+- week35 从相邻数开始，后面的章节越来越难，估计进度会变慢。
 - week36 
-
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ### 8. [增补] 教沐沐服务别人
 
 通过服务别人，帮助他认识到别人对他的付出并不是理所当然的，要以感恩的心对待。落实到每天的日常：
 
 - 全家人用餐结束后，沐沐负责收拾碗筷到洗碗机；
-- 每周六与周日的早晨，沐沐负责准备；
+- 每周六与周日的早晨，沐沐负责准备早饭；
 - 沐沐周日买西瓜到教会。
 - 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
 
@@ -296,6 +364,22 @@ tags:
 - week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
 - week35 
 - week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 
 
@@ -345,8 +429,8 @@ tags:
 - week31 🔴 team meeting 介绍每天的日程安排，感觉还不错。
 - week32 🔴 team meeting
 - week33 🔴 一点进度都没有
-- week34 ✔️ Talk with Ben
-- week35 
+- week34 ✔️ Talk with Ben(customer success team)
+- week35 Talk with Customer (hosted by Vincent)
 - week36 
 - week37
 - week38
@@ -408,7 +492,7 @@ tags:
 - week32 Employee initial value
 - week33 deprecate form in employee information
 - week34 deprecate form in employee information
-- week35 
+- week35 ADP V2
 - week36 
 - week37
 - week38
@@ -461,7 +545,7 @@ tags:
 - week32 ✔️ Udemy Section 17: Databases in AWS
 - week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
 - week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
-- week35 
+- week35 Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
 - week36 
 - week37
 - week38
@@ -532,23 +616,47 @@ tags:
 - week52 
 
 
-### 4.提高自己远程办公的能力
+### ~~4.提高自己远程办公的能力~~
 
-Objective
+~~Objective~~
 
-- 规律的作息
-- 充足的睡眠
-- 强壮的身体
-- 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。
+- ~~规律的作息~~
+- ~~充足的睡眠~~
+- ~~强壮的身体~~
+- ~~合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。~~
 
-远程办公作息表
+~~远程办公作息表~~
 
-- 7:00 起床
-- 20:00-21:00 跑步 & 拉伸 (晚饭要少吃一点，这样跑步才不会胃难受）
-- 21:30-22:00 吕蓝文祷告会
-- 22:30-23:00 睡觉
+- ~~7:00 起床~~
+- ~~20:00-21:00 跑步 & 拉伸 (晚饭要少吃一点，这样跑步才不会胃难受）~~
+- ~~21:30-22:00 吕蓝文祷告会~~
+- ~~22:30-23:00 睡觉~~
 
 (2020-07-13 update: 时间已经过去半年了，这一个目标因为没有可执行性，是执行力度最差的一个计划。这个烂目标就放在这里警戒自己：高高在上的目标如果不能细化，就是徒劳。）
+
+(2020-08-27 update: 放弃这个烂目标，增补一个简单的目标—— 早起！六点起床读经祷告！）
+
+### 4. [增补？] 6:00 AM 起床
+
+- week35 1111
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
 
 ### 5.业余爱好探索
 
@@ -610,11 +718,13 @@ Objective
 
 不要忙于做事情，让身心俱疲；也不要流于形式，忘记了关心别人的初心。目地很重要，也记得欣赏沿途的美景。
 
-不要因为有些人哭的最响，就急忙去喂他们。人都是喂不饱的，唯有神可以喂饱。此外要帮助他们校正预期。（2020-08-17 update 再次印证，不要因为哭的最响的人的需要，而忽略整体的牧养缺口）
+不要因为有些人哭的最响，就急忙去喂他们。人是喂不饱的，唯有神的话可以喂饱。此外要帮助他们校正预期。
+
+（2020-08-17 update 再次提醒自己，不要只聚焦在哭的最响的人，而忽略整体的牧养缺口。）
 
 ### 1.开放家庭
 
-每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
+每月请弟兄姐妹/朋友/同事来家里聚餐。刘小坤喜爱安静，一开始以为她会反对，结果她喜欢招待那些关系亲密的朋友。
   
 - 2020-01-01 ✔️ 宜山小组元旦聚餐 
 - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
@@ -681,7 +791,6 @@ Objective
 2. 如果朋友结婚，送他们《爱的五种语言》。
 	- Ben@workstream ✔️
 	- 陈哲和王黎 ✔️
-	- Sara和子玉 ✔️
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
@@ -690,8 +799,9 @@ Objective
 
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》
-	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。
-	- 送琳琳姑姑圣经
+	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。✔️
+	- 送琳琳姑姑圣经 ✔️
+	- 送阿姨的儿子《欲罢不能》✔️
 
 
 ### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -718,18 +828,18 @@ Objective
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
-- week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
+- week5 因为疫情，无法聚会。推广使用 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
-- 鼓励坤叔把读经打卡活动扩展到整个教会层面。
+- 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我居然每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
 
 ### 9. 自己不擅长的事情，找其他人互补。
 
 - 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
-- 我不喜欢组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
-- 我不喜欢参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
-- 微信/Signal 中大量的沟通，让我的时间碎片化，无法深入思考，我很不喜欢。
+- 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。
+- 我不喜欢参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动，爬山，徒步）
+- 我不喜欢微信和Signal 中的沟通，IM 让我的时间碎片化，无法深入思考。
 
 
 <!---### 5.和教会的 Vincent 聊聊天
@@ -739,6 +849,7 @@ Objective
 - 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 - 2020-05-03 ✔️ 在滨江大道散步
 - 2020-07-07 没有办法继续下去了。
+- 2020-08-27 他已经离开教会了，不再彼此联系了。
 -->
 
 2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
@@ -749,15 +860,13 @@ Objective
 
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
-- week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)，避免对股票上瘾。
+- week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)，避免对股票上瘾，浪费时间。
 
 ---
 
-**感概**
+已经工作八年了，有六年都做了年度计划。大部分都是按照计划推进，但依然无法掌控人生的轨迹。
 
-毕业工作八年了，有六年都做了年度计划。即使按照计划推进，但依然无法掌控人生的轨迹。重大人生转折，都是巧合。
-
-一是，年轻时没有智慧，容易被虚空的事情吸引。急功近利，随大流，忽视家庭，忽视健康。等到自己稍微懂成熟一点，就会发现当初设定的目标都是虚空。
+一是，年轻时没有智慧，做事情容易急功近利，随大流，忽视家庭，忽视健康。等到稍微懂成熟一点，就会发现当初设定的一部分目标都是虚空。
 
 二是，人真的太渺小了，哪扇门开启，哪扇门关闭，往往大环境决定的。
 
